--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,2 @@
-<!--The content below is only a placeholder and can be replaced.-->
-
-
-<div id="logoFinalfantasy" style="text-align:center">
-    <img style="width: 100%;" src="../../img/FFRPG_new_logo_web_banner2.png">
-</div>
-
-<div id="menu">
-    <div>
-        <div (click)="sonidoOk()" (mouseover)="sonido()" id="menuCuadrado">Prueba1</div>
-    </div>
-    <div>
-        <div (click)="sonidoOk()" (mouseover)="sonido()" id="menuCuadrado">Prueba1</div>
-    </div>
-    <div>
-        <div (click)="sonidoOk()" (mouseover)="sonido()" id="menuCuadrado">Prueba1</div>
-    </div>
-    <div>
-        <div (click)="sonidoOk()" (mouseover)="sonido()" id="menuCuadrado">Prueba1</div>
-    </div>
-    <div>
-        <div (click)="sonidoOk()" (mouseover)="sonido()" id="menuCuadrado">Prueba1</div>
-    </div>
-
-</div>
+<router-outlet></router-outlet>
+ 
