--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,2 @@
-body{
-    background-image: url("../img/d07fad1a981c37165d2395f383ed0532.gif"); 
-    background-repeat: no-repeat;
-    background-size: auto;
-  }
+*{padding: 0%;
+margin: 0%;}
